# docugent

./: .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  env.example  main.py  pyproject.toml  setup.py  test_speakers.py
.github/workflows/: deploy.yml  lint.yml
app/: __init__.py
app/agents/: __init__.py  agent_api.py  apiconf_agent.py
app/agents/tools/: __init__.py  calendar_tools.py  csv_schedule_tools.py  navigation_tools.py  organizer_tools.py  schedule_tools.py  speaker_tools.py  web_scraping_tools.py
app/api/: __init__.py
app/api/v1/: __init__.py  agents_router.py
app/config/: __init__.py  logger.py  settings.py
app/schemas/: __init__.py  agents.py  base.py
app/services/: __init__.py  agent_config.py  agent_factory.py  message_processor.py  response_formatter.py  response_processor.py  session_manager.py  tool_manager.py  web_scraping_service.py
data/: Meet the team  - Sheet1.csv  api-conf-lagos-2025 flattened accepted sessions - exported 2025-07-05 - Accepted sessions and speakers.csv  schedule.json  speakers.json
docker/: Dockerfile
docker/backend/: Dockerfile
docker/nginx/: Dockerfile  nginx.conf
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.module.css  App.tsx  index.css  main.tsx
frontend/src/components/: Chat.module.css  Chat.tsx  Sidebar.module.css  Sidebar.tsx  TypingIndicator.module.css  TypingIndicator.tsx
scripts/: crontab_example.txt  run_csv_update.sh  update_csv_data.py
tests/: __init__.py  test_agent.py
